--- a/4-natours/starter/views/tour.pug
+++ b/4-natours/starter/views/tour.pug
@@ -1,6 +1,11 @@
 extends base
 include _reviewCard
 
+block append head
+    script(src='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js') 
+    link(href='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet') 
+    //- script(src='/js/mapbox.js')
+
 mixin overviewBox(label, text, icon)
     .overview-box__detail
         svg.overview-box__icon
@@ -55,41 +60,19 @@ block content
             - const parapraphs = tour.description.split('\n');
             each p in parapraphs
                 p.description__text= p
-            //- p.description__text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            //- p.description__text Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum!
-
+            
     section.section-pictures
         each img, i in tour.images
             .picture-box
                 img.picture-box__img(src=`/img/tours/${img}`, alt=`The Park Camper Tour ${i+1}`, class=`picture-box__img--${i+1}`)
-        //- .picture-box
-        //-     img.picture-box__img.picture-box__img--2(src='/img/tour-5-2.jpg', alt='The Park Camper Tour 1')
-        //- .picture-box
-        //-     img.picture-box__img.picture-box__img--3(src='/img/tour-5-3.jpg', alt='The Park Camper Tour 1')
 
     section.section-map
-        #map
+        #map(data-locations=`${JSON.stringify(tour.locations)}`)
 
     section.section-reviews
         .reviews
             each review in tour.reviews
                 +reviewCard(review)
-                //- .reviews__card
-                //-     .reviews__avatar
-                //-         img.reviews__avatar-img(src='/img/users/user-7.jpg', alt='Jim Brown')
-                //-         h6.reviews__user Jim Brown
-                //-     p.reviews__text Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque dignissimos sint quo commodi corrupti accusantium veniam saepe numquam.
-                //-     .reviews__rating
-                //-         svg.reviews__star.reviews__star--active
-                //-             use(xlink:href='/img/icons.svg#icon-star')
-                //-         svg.reviews__star.reviews__star--active
-                //-             use(xlink:href='/img/icons.svg#icon-star')
-                //-         svg.reviews__star.reviews__star--active
-                //-             use(xlink:href='/img/icons.svg#icon-star')
-                //-         svg.reviews__star.reviews__star--active
-                //-             use(xlink:href='/img/icons.svg#icon-star')
-                //-         svg.reviews__star.reviews__star--active
-                //-             use(xlink:href='/img/icons.svg#icon-star')
 
     section.section-cta
         .cta
